# Role_Based_Personalized_Learning_Pathway_Engine

./: README.md  main.py  pyproject.toml  requirements.txt
backend/: database.py  main.py  models.py  schemas.py
data/cleaned/: courses_cleaned.csv  role_skill_mapping.csv
frontend/: app.py
ml/: gap_analysis.py  knowledge_graph.py  pathway_generator.py  skill_extractor.py
notebooks/: naukri_to_role_skill_mapping.ipynb  online_courses_cleaning.ipynb  ppo_training.ipynb
tests/: test_gap_analysis.py  test_knowledge_graph.py  test_pathway_generator.py  test_skill_extractor.py
