[project]
name = "rb-plpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "gymnasium>=1.2.3",
    "neo4j>=6.1.0",
    "psycopg2-binary>=2.9.11",
    "pylance>=3.0.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "stable-baselines3>=2.8.0",
    "streamlit>=1.55.0",
    "tdqm>=0.0.1",
    "uvicorn>=0.42.0",
]
